--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">코딩알려주는 누나 자바스크립트 강의 출시 임박!!</h1>
+    <h1 class="title">주택관리사 기출 문제 분석</h1>
     <div class="content">
-      <h2>코딩알려주는 누나 강의가 이번달 11월 30일에 출시 될 예정입니다!</h2>
+      <h2>주택관리사 1.민법 2.회계원리 3.공동주택시설개론</h2>
       <img
         src="https://image.shutterstock.com/image-vector/amazing-colorful-vector-concept-word-260nw-1436585777.jpg"
       />
       <p>
-        저번 HTML/CSS 강의때는 이를 갈고 만들었다면 이번에는
+        주택관리사 연차별 기출문제를 제시하고 해설을 제공합니다
         <strong>잇몸을 갈고</strong> 만들었습니다
       </p>
       <h3>많이 사랑해 주실거죠???</h3>
