--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       />
       <p>
         주택관리사 연차별 기출문제를 제시하고 해설을 제공합니다
-        <strong>잇몸을 갈고</strong> 만들었습니다
+        <strong>체계적인 분석을</strong> 기대하세요
       </p>
       <h3>많이 사랑해 주실거죠???</h3>
-      <h2>하하핳 넷리파이 테스트 완료</h2>
+      <h2>이 화면은 테스트 입니다</h2>
       <h2>새로 추가된 코드임!!!!</h2>
     </div>
   </body>
